Initial streamlit push, changed some details in most file to try and make it compatible

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,25 +6,21 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile.serving
-#      args:
-#        ARG: <ARG>
-#    image: ift6758/serving:<TAG>
-#    ports:
-#      - <SERVING_PORT>:<SERVING_PORT>
-#    environment:
-#      DOCKER_ENV_VAR = ${LOCAL_ENV_VAR}
-###### Uncomment below when you're ready to add the final notebook container to your docker compose
-##  streamlit:
-##    build:
-##      context: ./
-##      dockerfile: ./Dockerfile.streamlit
-##      args:
-##        ARG: <ARG>
-##    image: ift6758/streamlit:<TAG>
-##    ports:
-##      - <STREAMLIT_PORT>:<STREAMLIT_PORT>
-##    environment:
-##      OTHER_DOCKER_ENV_VAR = ${OTHER_LOCAL_ENV_VAR}
-      
+    image: ift6758/serving:latest
+    ports:
+      - 8000:8000
+    environment:
+      - COMET_API_KEY=${COMET_API_KEY}
+      - COMET_ML_PROJECT_NAME=${COMET_ML_PROJECT_NAME}
+      - COMET_ML_WORKSPACE=${COMET_ML_WORKSPACE}
 
-     
+  streamlit:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.streamlit
+    image: ift6758/streamlit:latest
+    environment:
+      - SERVING_HOST=serving
+      - SERVING_PORT=8000
+    ports:
+      - 8005:8005
