--- a/Dockerfile.serving
+++ b/Dockerfile.serving
@@ -14,44 +14,19 @@ FROM python:3.7
 # Create and cd into /code as your working directory
 WORKDIR /code
 
-
-# The main docker commands you will find useful:
-# 
-# Add a file or directory
-# https://docs.docker.com/engine/reference/builder/#add
-#
-#       ADD ./<SOURCE_DIR/FILE> ./<DOCKER_DIR/FILE>
-#
-# Run a shell command (tip: chain shell commands with && rather than multiple RUN commands)
-# https://docs.docker.com/engine/reference/builder/#run
-#
-#       RUN <SHELL COMMAND>   
-#
-# Set an environment variable:
-# https://docs.docker.com/engine/reference/builder/#env
-#
-#       ENV <ENV_VAR>=<DEFAULT>
-#
-# Expose a port
-# https://docs.docker.com/engine/reference/builder/#port
-#
-#       EXPOSE <PORT>
-#
-# Provide default command for executing container
-# https://docs.docker.com/engine/reference/builder/#cmd
-#
-#       CMD <SHELL COMMAND>
-
-
-
 # TODO: add code, optionally a default model if you want 
-
+COPY ift6758/requirements.txt .
 
 # TODO: install libs
-
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 # TODO: expose ports (or do this in docker-compose)
-
+EXPOSE 8000
 
 # TODO: specify default command - this is not required because you can always specify the command
+
+COPY serving .
+
+CMD ["gunicorn", "-w", "1", "--bind", "0.0.0.0:8000", "app:app"]
 # either with the docker run command or in the docker-compose file
