milestone 3 with docker final

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-COMET_API_KEY="h8nPazpldnTDrnnQ3u0j0MFRz"
+COMET_API_KEY=""
 COMET_ML_PROJECT_NAME="ift-6758-b03-project"
 COMET_ML_WORKSPACE="duyhung2201"
