--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -8,27 +8,25 @@
 
 # https://docs.docker.com/engine/reference/builder/#from
 # You shouldn't need to change this
-FROM python:3.7
+FROM python:3.10
 
 # https://docs.docker.com/engine/reference/builder/#workdir
 # Create and cd into /code as your working directory
 WORKDIR /code
-COPY ift6758 ./ift6758/
-COPY ift6758/requirements.txt .
-COPY streamlit_app.py .
 
-RUN pip install --upgrade pip
+# TODO: add code, optionally a default model if you want 
+COPY ift6758/requirements.txt .
+
+# TODO: install libs
 RUN pip install -r requirements.txt
 
 # TODO: expose ports (or do this in docker-compose)
-EXPOSE 8005
+EXPOSE 8080
 
 # TODO: specify default command - this is not required because you can always specify the command
 
-ENTRYPOINT ["streamlit", "run"]
-CMD ["streamlit_app.py", "--server.port=8005", "--server.address=0.0.0.0"]
+COPY client ./client
+COPY streamlit_app.py .
 
-
-
-
-
+CMD ["streamlit", "run", "streamlit_app.py", "--server.port", "8080", "--server.address", "0.0.0.0", "--server.headless", "True"]
+# either with the docker run command or in the docker-compose file
