--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               IFT6758 Blog
 tagline:             ''
 description:         ''
 url:                 ''
-baseurl:             ''
+# baseurl:             ''
 paginate:            5
 permalink:           pretty
 
