chore: Comment out baseurl for '/Hockey-prediction' in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               IFT6758 Blog
 tagline:             ''
 description:         ''
 url:                 ''
-baseurl:             '/Hockey-prediction'
+# baseurl:             '/Hockey-prediction'
 paginate:            5
 permalink:           pretty
 
