chore: Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Gauransh Kumar(Team B03)
-  url:               https://gauransh.dev
-  email:             gauransh.kumar@umontreal.com
+  name:              Hung Le
+  email:             duyhung2201@gmail.com
 
 # Gems
 plugins:
