chore: Change title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               IFT6758 Blog
+title:               Hockey Prediction Blog
 tagline:             ''
 description:         ''
 url:                 ''
